migarate eslint to obytes config

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "jsdelivr": "reactjs-popup.js",
   "scripts": {
     "test": "jest",
-    "test-watch": "jest --watch",
+    "test:watch": "jest --watchAll",
     "update-snap": "jest --updateSnapshot",
     "eslint": "eslint src/**.js stories/**.js",
     "start": "parcel serve ./stories/index.html --no-autoinstall",
@@ -24,35 +24,21 @@
     "@babel/plugin-proposal-class-properties": "^7.3.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^10.0.1",
     "babel-polyfill": "^6.26.0",
     "bili": "^3.0.15",
     "cross-env": "^5.1.1",
     "del": "^3.0.0",
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.0",
-    "eslint": "^5.13.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-config-obytes": "^0.1.0",
     "http-server": "^0.10.0",
     "jest": "^24.0.0",
+    "jest-dom": "^3.1.2",
     "parcel-bundler": "^1.7.1",
-    "prettier": "^1.16.3",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-testing-library": "^5.4.4",
     "story-router": "^1.0.1",
     "why-did-you-update": "^0.1.1"
-  },
-  "jest": {
-    "testEnvironment": "jsdom"
   },
   "repository": {
     "type": "git",
