--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
-  "editor.formatOnSave": false,
+  // These are all my auto-save configs
+  "editor.formatOnSave": true,
+  "prettier.eslintIntegration": true,
+  // turn it off for JS, we will do this via eslint
+  "[javascript]": {
+    "editor.formatOnSave": false
+  },
+  // tell the ESLint plugin to run on save
   "eslint.autoFixOnSave": true,
-  "prettier.eslintIntegration": true
+  // if you are using prettier vscode extension
+  "prettier.disableLanguages": ["js"]
 }
