update react live and mdx for docs

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,30 +4,36 @@
   "version": "1.0.0",
   "author": "Youssouf El Azizi <youssoufelazizi@gmail.com>",
   "dependencies": {
-    "@mdx-js/mdx": "^0.15.5",
-    "@mdx-js/tag": "^0.15.0",
-    "gatsby": "^2.0.0",
-    "gatsby-cli": "^2.4.3",
-    "gatsby-mdx": "^0.2.0",
+    "@mdx-js/mdx": "^1.0.21",
+    "@mdx-js/react": "^1.0.21",
+    "change-case": "^3.1.0",
+    "gatsby": "^2.10.0",
+    "gatsby-awesome-pagination": "^0.3.4",
+    "gatsby-cli": "^2.7.0",
+    "gatsby-image": "^2.2.1",
+    "gatsby-link": "^2.2.0",
+    "gatsby-mdx": "^0.6.3",
     "gatsby-plugin-canonical-urls": "^2.0.6",
     "gatsby-plugin-google-analytics": "^2.0.6",
     "gatsby-plugin-google-fonts": "^0.0.4",
-    "gatsby-plugin-manifest": "^2.0.2",
+    "gatsby-plugin-manifest": "^2.2.0",
     "gatsby-plugin-netlify": "^2.0.1",
     "gatsby-plugin-nprogress": "^2.0.5",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.1.0",
     "gatsby-remark-prismjs": "^3.0.2",
-    "gatsby-source-filesystem": "^2.0.3",
-    "gatsby-transformer-remark": "^2.1.7",
+    "gatsby-source-filesystem": "^2.1.0",
+    "gatsby-transformer-remark": "^2.5.0",
     "infima": "^0.2.0-alpha.2",
     "node-sass": "^4.12.0",
-    "prismjs": "^1.15.0",
+    "prism-react-renderer": "^0.1.7",
+    "prism-themes": "^1.1.0",
+    "prismjs": "^1.16.0",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
-    "react-live": "1.8.0-0",
+    "react-live": "^2.1.2",
     "reactjs-popup": "^1.2.0",
     "terser": "3.14"
   },
